Fix heading alignment on basics

--- a/plugins/blip/basics/less/DashboardSection.less
+++ b/plugins/blip/basics/less/DashboardSection.less
@@ -50,7 +50,7 @@
     font-size: 15px;
     font-weight: bold;
     .header;
-    padding: 15px 5px;
+    padding: 15px;
 
     i:before {
       margin-right: 0
